# bozz

./: .gitignore  .vercelignore  BOZZ_PLUS_PLAN.md  README.md  SECURITY.md  STYLE_BRIEF.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vercel.json
.claude/: launch.json
.github/workflows/: deploy-vercel.yml  release.yml
api/: _auth.js  gc-callback.js  gc-institutions.js  gc-link.js  gc-transactions.js  google-token.js  notion-redirect.js  notion-token.js  send-topic-invite.js  terra-webhook.js  terra-widget.js  topic-invite.js
docs/: ios-build.md  macos-signing.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
onboarding-loop/: FINAL-REPORT.md  full.diff
onboarding-loop/round-1/: changes.md  feedback.md  round1.diff
onboarding-loop/round-2/: feedback.md
onboarding-loop/round-3/: changes.md
overnight-dogfood/: FINAL-REPORT.md  README.md
overnight-dogfood-2/: FINAL-REPORT.md  README.md
overnight-dogfood-2/round-1/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-2/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-3/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-4/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-5/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-6/: board-raw.json  ceo-review.md  changes.md  feedback.md
overnight-dogfood-2/round-7/: board-raw.json  ceo-review.md  changes.md  feedback.md
public/: manifest.webmanifest
scripts/: shoot.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useFocusTrap.ts
website/: index.html  plus.html  privacy.html  terms.html
(+153 files in other folders)
