[package]
name = "bozz"
version = "0.1.28"
description = "Bozz — personal life dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "bozz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
imap = "2"
native-tls = "0.2"
