[package]
name = "bozz"
version = "0.1.36"
description = "Bozz — personal life dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "bozz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
# tauri-plugin-updater pulls in `zip` without a deflate decoder, so its in-app
# updater can only extract STORED zips and fails on Deflate ones with
# "Compression method not supported". Enabling the `deflate` feature here unifies
# onto the same `zip` instance so the updater can read compressed archives too.
zip = { version = "4", default-features = false, features = ["deflate"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
imap = "2"
native-tls = "0.2"
